--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta content="西上良祐(Ryosuke Nishigami)の情報をまとめたページ。" name="description">
-    <title>Ryosuke Nishigami</title>
+    <meta content="Ryosuke Nishigami(西上良祐)の情報をまとめたページ。" name="description">
+    <title>Ryosuke Nishigami(西上良祐)</title>
   </head>
   <body>
-    <h1>Ryosuke Nishigami</h1>
+    <h1>Ryosuke Nishigami(西上良祐)</h1>
     <ul>
       <li><a href="https://twitter.com/_tapigami">twitter</a></li>
       <li><a href="https://www.facebook.com/nishisuke">facebook</a></li>
