--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Ryosuke Nishigami(西上良祐)の情報をまとめたページ。" name="description">
     <title>Ryosuke Nishigami(西上良祐)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1>Ryosuke Nishigami(西上良祐)</h1>
