--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Ryosuke Nishigami(西上良祐)</h1>
     <ul>
-      <li><a href="https://twitter.com/_tapigami">twitter</a></li>
-      <li><a href="https://www.facebook.com/nishisuke">facebook</a></li>
-      <li><a href="https://www.wantedly.com/users/18167365">wantedly</a></li>
+      <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
+      <li><a href="https://www.facebook.com/ryosuke.nishigami">https://www.facebook.com/ryosuke.nishigami</a></li>
+      <li><a href="https://www.wantedly.com/users/18167365">https://www.wantedly.com/users/18167365</a></li>
     </ul>
   </body>
 </html>
