--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>Ryosuke Nishigami(西上良祐)</h1>
+    <h1>Ryosuke Nishigami</h1>
+    <h2>nishisuke</h2>
     <ul>
       <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
-      <li><a href="https://www.facebook.com/ryosuke.nishigami">https://www.facebook.com/ryosuke.nishigami</a></li>
-      <li><a href="https://www.wantedly.com/users/18167365">https://www.wantedly.com/users/18167365</a></li>
+    </ul>
+    <h3>dependencies</h3>
+    <ul>
+      <li><a href="https://github.com/nishisuke">https://github.com/nishisuke</a></li>
+      <li><a href="https://rns.hateblo.jp">https://rns.hateblo.jp</a></li>
+      <li><a href="https://qiita.com/nishisuke">https://qiita.com/nishisuke</a></li>
+      <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
+      <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
+      <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
+    </ul>
+    <h3>skill pro(duction) level</h3>
+    <ul>
+      <li>ruby</li>
+      <li>rails</li>
+      <li>active record</li>
+      <li>go</li>
+      <li>graphql(go, ruby)</li>
+      <li>relay(go, ruby)</li>
+      <li>gatsby</li>
+      <li>typescript</li>
+      <li>swift</li>
+      <li>swift AVFoundation</li>
+      <li>swift MVP CleanArchtecture VIPER</li>
+      <li>swift RXSwift</li>
+      <li>pwa</li>
+      <li>react</li>
+      <li>react hooks(今年一の感動)</li>
+      <li>redux</li>
+      <li>mysql</li>
+      <li>firebase</li>
+      <li>firestore(swift react)</li>
+      <li>AWS EC2</li>
+      <li>AWS lambda</li>
+      <li>AWS vpc</li>
+      <li>AWS elastic beanstalk</li>
+      <li>AWS api fateway</li>
+      <li>docker</li>
+      <li>circle ci</li>
+      <li>git(鬼つよ)</li>
+      <li>vim(鬼つよ)</li>
+    </ul>
+    <h3>hobby lebel</h3>
+    <ul>
+      <li>gcp</li>
+      <li>terraform</li>
+      <li>react native</li>
+      <li>Swift ARkit</li>
+      <li>Swift metal</li>
+      <li>DNN</li>
     </ul>
   </body>
 </html>
