--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <ul>
       <li><a href="https://github.com/nishisuke">https://github.com/nishisuke</a></li>
       <li><a href="https://rns.hateblo.jp">https://rns.hateblo.jp</a></li>
+      <li><a href="https://note.mu/nishisuke">https://note.mu/nishisuke</a></li>
       <li><a href="https://qiita.com/nishisuke">https://qiita.com/nishisuke</a></li>
       <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
       <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
@@ -53,6 +54,15 @@
       <li>vim(鬼つよ)</li>
     </ul>
     <h3>hobby lebel</h3>
+    <ul>
+      <li>gcp</li>
+      <li>terraform</li>
+      <li>react native</li>
+      <li>Swift ARkit</li>
+      <li>Swift metal</li>
+      <li>DNN</li>
+    </ul>
+    <h3>history</h3>
     <ul>
       <li>gcp</li>
       <li>terraform</li>
