--- a/src/index.html
+++ b/src/index.html
@@ -64,12 +64,12 @@
     </ul>
     <h3>history</h3>
     <ul>
-      <li>gcp</li>
-      <li>terraform</li>
-      <li>react native</li>
-      <li>Swift ARkit</li>
-      <li>Swift metal</li>
-      <li>DNN</li>
+      <li>FiNC intern 2014~2015</li>
+      <li>eureka intern 2016</li>
+      <li>BFT CTO 2017</li>
+      <li>MoneyForward 2018</li>
+      <li>picon inc 2019</li>
+      <li>freelance</li>
     </ul>
   </body>
 </html>
