--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,18 @@
     <ul>
       <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
     </ul>
+
+    <h3>どんな人？</h3>
+    <p>
+    hoge
+    </p>
+
+    <h3>ちょっと過去の自慢</h3>
+    <p>
+      東工大情報工学科 成績上位5%
+      忘れたけどGPAでいうと93くらい？
+    </p>
+
     <h3>dependencies</h3>
     <ul>
       <li><a href="https://github.com/nishisuke">https://github.com/nishisuke</a></li>
@@ -64,6 +76,7 @@
     </ul>
     <h3>history</h3>
     <ul>
+      <li>computer science @Tokyo institute of technology 2013/4~2017/3</li>
       <li>FiNC intern 2014~2015</li>
       <li>eureka intern 2016</li>
       <li>BFT CTO 2017</li>
