--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,12 @@
     </ul>
     <h3>history</h3>
     <ul>
-      <li>computer science @Tokyo institute of technology 2013/4~2017/3</li>
-      <li>FiNC intern 2014~2015</li>
-      <li>eureka intern 2016</li>
-      <li>BFT CTO 2017</li>
-      <li>MoneyForward 2018</li>
-      <li>picon inc 2019</li>
+      <li>computer science @Tokyo institute of technology</li>
+      <li>FiNC intern</li>
+      <li>eureka intern</li>
+      <li>BLT CTO</li>
+      <li>MoneyForward</li>
+      <li>picon inc</li>
       <li>freelance</li>
     </ul>
   </body>
