--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,15 @@
       <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
     </ul>
 
+    <h3>strength finder</h3>
+    <ol>
+      <li>回復志向</li>
+      <li>分析思考</li>
+      <li>戦略性</li>
+      <li>活発性</li>
+      <li>目標志向</li>
+    </ol>
+
     <h3>dependencies</h3>
     <ul>
       <li><a href="https://github.com/nishisuke">https://github.com/nishisuke</a></li>
