--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
       <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
       <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
+      <li><a href="https://www.wantedly.com/users/18167365">https://www.wantedly.com/users/18167365</a></li>
     </ul>
     <h3>skill pro(duction) level</h3>
     <ul>
