--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,26 @@
       <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
     </ul>
 
+    <h3>思考</h3>
+    <p>
+      プログラミングは手段。
+    </p>
+
+    <h3>今までやったこと</h3>
+    <ul>
+      <li>外部ベンダーが作ったECのバックエンドリファクタリング。一万行程度。デザインパターンを駆使した</li>
+      <li>テスト時間短縮 2.5h -> 15min</li>
+      <li>google speed insight 0 -> 70</li>
+      <li>高負荷のAPI performance向上 5sec -> 0.2sec</li>
+      <li>外部API連携</li>
+      <li>公開apiの設計, 実装</li>
+      <li>在庫管理システムの実装</li>
+      <li>複雑なドメインのバックエンド実装、リファクタリング</li>
+      <li>カメラ、動画加工、双方向チャットのiOS アプリ立ち上げ</li>
+      <li>SPA構築 rest, graphql relay, firebase, react, vue</li>
+      <li>railsによる爆速MVP立ち上げ</li>
+    </ul>
+
     <h3>strength finder</h3>
     <ol>
       <li>回復志向</li>
