--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,24 @@
       プログラミングは手段。
     </p>
 
-    <h3>今までやったこと</h3>
+    <h3>今までに実際やったこと</h3>
     <ul>
       <li>外部ベンダーが作ったECのバックエンドリファクタリング。一万行程度。デザインパターンを駆使した</li>
       <li>テスト時間短縮 2.5h -> 15min</li>
       <li>google speed insight 0 -> 70</li>
-      <li>高負荷のAPI performance向上 5sec -> 0.2sec</li>
+      <li>ECのファネル改善によるCVR向上0.14% -> 0.22%</li>
+      <li>ECのCMSのクリティカルなsql injectionの発見、修正</li>
+      <li>在庫管理システムの実装</li>
+      <li>ECのログインセッション、カート情報などのセキュリティを標準まで引き上げる。(ベンダーの脆いセキュリティを直した)</li>
+      <li>railsによる爆速MVP立ち上げ</li>
+      <li>対面でのユーザーヒアリング、ニーズ, 課題汲み取り、</li>
+      <li>アジャイルチームのプロジェクトマネージャー</li>
       <li>外部API連携</li>
       <li>公開apiの設計, 実装</li>
-      <li>在庫管理システムの実装</li>
       <li>複雑なドメインのバックエンド実装、リファクタリング</li>
+      <li>高負荷のAPI performance向上 5sec -> 0.2sec</li>
       <li>カメラ、動画加工、双方向チャットのiOS アプリ立ち上げ</li>
       <li>SPA構築 rest, graphql relay, firebase, react, vue</li>
-      <li>railsによる爆速MVP立ち上げ</li>
     </ul>
 
     <h3>strength finder</h3>
