--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
 
     <h3>思考</h3>
     <p>
+      やりたいこと：ユーザーに価値を届ける
+      得意なこと：アーキテクチャ &amp クラス設計, 負債の少ない実装, リファクタリング, テストコード
+      できること：ヒアリング, 数値分析, UX改善
+      当たり前：webサービス, iosアプリ立ち上げ, CI/CDフロー構築, 可視化基盤整備
+
       プログラミングは手段。
     </p>
 
@@ -53,14 +58,6 @@
       <li><a href="https://rns.hateblo.jp">https://rns.hateblo.jp</a></li>
       <li><a href="https://qiita.com/nishisuke">https://qiita.com/nishisuke</a></li>
       <li><a href="https://www.wantedly.com/users/18167365">https://www.wantedly.com/users/18167365</a></li>
-    </ul>
-
-    <h3>頑張っていく予定</h3>
-    <ul>
-      <li><a href="https://note.mu/nishisuke">https://note.mu/nishisuke</a></li>
-      <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
-      <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
-      <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
     </ul>
 
     <h3>skill pro(duction) level</h3>
@@ -116,6 +113,14 @@
       <li>BLT CTO</li>
       <li>MoneyForward</li>
       <li>freelance</li>
+    </ul>
+
+    <h3>頑張っていく予定</h3>
+    <ul>
+      <li><a href="https://note.mu/nishisuke">https://note.mu/nishisuke</a></li>
+      <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
+      <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
+      <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
     </ul>
   </body>
 </html>
