--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <section class="section">
+      <div class="container">
     <h1>Ryosuke Nishigami</h1>
     <h2>nishisuke</h2>
     <ul>
@@ -122,5 +124,7 @@
       <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
       <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
     </ul>
+      </div>
+    </section>
   </body>
 </html>
