--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
   <body>
     <section class="section">
       <div class="container">
-        <h1>Ryosuke Nishigami</h1>
-        <h2>nishisuke</h2>
-        <ul>
-          <li><a href="https://twitter.com/_nishisuke">https://twitter.com/_nishisuke</a></li>
-        </ul>
+        <h1 class="title">Ryosuke Nishigami</h1>
+        <h2 class="subtitle">nishisuke</h2>
+        <div class="content">
+          <p>
+            <a href="https://twitter.com/_nishisuke">@_nishisuke</a>
+          </p>
+        </div>
 
         <h3>思考</h3>
         <p>
@@ -123,7 +125,7 @@
           <li><a href="https://atcoder.jp/users/rns">https://atcoder.jp/users/rns</a></li>
           <li><a href="https://www.kaggle.com/nishisuke">https://www.kaggle.com/nishisuke</a></li>
           <li><a href="https://www.linkedin.com/in/ryosuke-nishigami-a44327159/">https://www.linkedin.com/in/ryosuke-nishigami-a44327159/</a></li>
-    </ul>
+        </ul>
       </div>
     </section>
   </body>
