--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,26 @@
 
           <h3>思考</h3>
           <p>
-            やりたいこと：ユーザーに価値を届ける
-            得意なこと：アーキテクチャ &amp クラス設計, 負債の少ない実装, リファクタリング, テストコード
-            できること：ヒアリング, 数値分析, UX改善
-            当たり前：webサービス, iosアプリ立ち上げ, CI/CDフロー構築, 可視化基盤整備
-
             プログラミングは手段。
+            <br />
+            やりたいこと：ユーザーに価値を届ける
+            <br />
+            得意なこと：アーキテクチャ &amp クラス設計, 負債の少ない実装, リファクタリング, テストコード
+            <br />
+            できること：ヒアリング, 数値分析, UX改善
+            <br />
+            当たり前：webサービス, iosアプリ立ち上げ, CI/CDフロー構築, 可視化基盤整備
           </p>
+
+          <h3>history</h3>
+          <ul>
+            <li>computer science @Tokyo institute of technology</li>
+            <li>FiNC intern</li>
+            <li>eureka intern</li>
+            <li>BLT CTO</li>
+            <li>MoneyForward (月間MVPゲット)</li>
+            <li>freelance</li>
+          </ul>
 
           <h3>今までに実際やったこと</h3>
           <ul>
@@ -107,15 +120,6 @@
             <li>Swift ARkit</li>
             <li>Swift metal</li>
             <li>DNN</li>
-          </ul>
-          <h3>history</h3>
-          <ul>
-            <li>computer science @Tokyo institute of technology</li>
-            <li>FiNC intern</li>
-            <li>eureka intern</li>
-            <li>BLT CTO</li>
-            <li>MoneyForward</li>
-            <li>freelance</li>
           </ul>
 
           <h3>頑張っていく予定</h3>
